package printscript.common

enum class TokenType {
    LET,
    IDENTIFIER,
    PRINTLN,
    NUMBERTYPE,
    NUMBERLITERAL,
    STRINGLITERAL,
    STRINGTYPE,
    PLUS,
    MINUS,
    MULTIPLY,
    DIVIDE,
    ASSIGN,
    COLON,
    SEMICOLON,
    LEFTPAREN,
    RIGHTPAREN,
    EOF,
}
