@startuml PrintScript_Lexer

package "common" {

    class Position <<data class>> {
        +line: Int
        +column: Int
    }

    class Token <<data class>> {
        +type: TokenType
        +start: Position
        +end: Position
        +value: String
    }

    enum TokenType <<sealed class>> {
        LET
        IDENTIFIER
        PRINTLN
        NUMBERTYPE
        NUMBERLITERAL
        STRINGLITERAL
        STRINGTYPE
        PLUS
        MINUS
        MULTIPLY
        DIVIDE
        ASSIGN
        COLON
        SEMICOLON
        LEFTPAREN
        RIGHTTPAREN
        EOF
    }

    interface ScriptError {
        +message: String
        +start: Position
        +end: Position
    }
}

package "lexer" {

    class CharStream {
        -reader: Reader
        -current: Int
        -next: Int
        -line: Int
        -column: Int
        +isAtEnd(): Boolean
        +peek(): Char?
        +peekNext(): Char?
        +position(): Position
        +advance(): Char
    }

    class LexerRules <<object>> {
        +keywords: Map<String, TokenType>
        +symbols: Map<Char, TokenType>
        +isQuote(c: Char): Boolean
        +isIdentifierStart(c: Char): Boolean
        +isIdentifierPart(c: Char): Boolean
    }

    class LexicalError {
        +message: String
        +start: Position
        +end: Position
    }

    class Lexer {
        -charStream: CharStream
        +tokenize(): Sequence<Token>
        -nextToken(): Token
        -skipWhitespace(): void
        -readIdentifier(start: Position): Token
        -readNumber(start: Position): Token
        -readString(start: Position): Token
        -readSymbol(start: Position, c: Char): Token
    }
}

class RuntimeException

' ===== relaciones =====
Token "1" --> "1" TokenType : type
Token "1" --> "2" Position : start / end

ScriptError <|.. LexicalError : implements
RuntimeException <|-- LexicalError : extends
LexicalError ..> Position : usa

Lexer "1" o-- "1" CharStream : contiene
Lexer ..> LexerRules : consulta
Lexer ..> Token : crea
Lexer ..> LexicalError : lanza

CharStream ..> Position : crea
LexerRules ..> TokenType : mapea

@enduml